FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_92f871292d4d9efda8fc738b7ece601b/error.log
/tmp/tmpmko5_kht/dolfin_expression_92f871292d4d9efda8fc738b7ece601b.cpp: In member function ‘virtual void dolfin::dolfin_expression_92f871292d4d9efda8fc738b7ece601b::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpmko5_kht/dolfin_expression_92f871292d4d9efda8fc738b7ece601b.cpp:76:132: error: expected ‘)’ before ‘;’ token
           values[0] = G*mgb/pow(stand_dev,3)/pow(2*pi,3/2)*a0*exp(-(pow(x[0],2) + pow(x[1],2) + pow(x[2],2))/(2*(pow(stand_dev,2)));
                                                                                                                                    ^
/tmp/tmpmko5_kht/dolfin_expression_92f871292d4d9efda8fc738b7ece601b.cpp: In member function ‘virtual double dolfin::dolfin_expression_92f871292d4d9efda8fc738b7ece601b::get_property(std::__cxx11::string) const’:
/tmp/tmpmko5_kht/dolfin_expression_92f871292d4d9efda8fc738b7ece601b.cpp:88:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;
           ^~
/tmp/tmpmko5_kht/dolfin_expression_92f871292d4d9efda8fc738b7ece601b.cpp:88:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;
                                                 ^~
